--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
   vertical-align: middle;
   box-sizing: border-box; /* ✅ forces equal sizing and alignment */
 }
+.leaflet-tooltip.county-tooltip {
+  background-color: white !important;
+  color: black !important;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 4px;
+  padding: 2px 6px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  pointer-events: none;
+  white-space: nowrap;
+}
 
 
     #auth-box {
