--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   pointer-events: none;
   white-space: nowrap;
+  transform-origin: top left;
+  transition: transform 0.1s ease-out;
+
 }
 
 
