--- a/index.html
+++ b/index.html
@@ -274,6 +274,13 @@
   import { roadNameToIds } from './roadNameToIds.js';
   console.log("Loaded roadNameToIds:", Object.keys(roadNameToIds));
   const map = L.map('map', { zoomControl: false }).setView([40.09, -76.3], 12);
+  map.on('zoomend', () => {
+  const zoom = map.getZoom();
+  const scale = Math.pow(0.95, 19 - zoom); // Adjust 0.95 or 19 to fine-tune size
+  document.querySelectorAll('.leaflet-tooltip.county-tooltip').forEach(el => {
+    el.style.transform = `scale(${scale})`;
+  });
+});
   map.createPane('clickable-buffer');
   map.getPane('clickable-buffer').style.pointerEvents = 'auto';
   map.createPane('hiddenRoads');
