--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   pointer-events: none;
   white-space: nowrap;
-  transform-origin: top left;
+  transform-origin: center center;
+  transform-box: fill-box;
   transition: transform 0.1s ease-out;
 
 }
