--- a/index.html
+++ b/index.html
@@ -277,11 +277,17 @@
   const map = L.map('map', { zoomControl: false }).setView([40.09, -76.3], 12);
   map.on('zoomend', () => {
   const zoom = map.getZoom();
-  const scale = Math.pow(0.95, 19 - zoom); // Adjust 0.95 or 19 to fine-tune size
-  document.querySelectorAll('.leaflet-tooltip.county-tooltip').forEach(el => {
-    el.style.transform = `scale(${scale})`;
+  const scale = Math.pow(0.96, 19 - zoom); // 0.96 feels less jumpy than 0.95
+  const tooltips = document.querySelectorAll('.leaflet-tooltip.county-tooltip');
+
+  tooltips.forEach(el => {
+    el.style.transform = `translate(-50%, -50%) scale(${scale})`;
+    el.style.left = '50%';
+    el.style.top = '50%';
+    el.style.position = 'absolute';
   });
 });
+
   map.createPane('clickable-buffer');
   map.getPane('clickable-buffer').style.pointerEvents = 'auto';
   map.createPane('hiddenRoads');
