--- a/index.html
+++ b/index.html
@@ -724,8 +724,8 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
       style: {
         color: '#0080ff',
         weight: 3,
-        fillColor: '#c0c0c0',
-        fillOpacity: 0.6,
+        fillColor: '#cce6ff',
+        fillOpacity: 0.3,
         pane: 'countyPolygon' // ✅ put it in its own top layer
       },
 
