--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@
       cursor: pointer;
       margin: 4px;
     }
+    #custom-tooltip {
+  position: absolute;
+  background-color: white;
+  color: black;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 4px;
+  padding: 2px 6px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  pointer-events: none;
+  white-space: nowrap;
+  z-index: 1000;
+  transform: translate(-50%, -50%);
+  display: none; /* Hidden by default */
+}
+
     .hint-dissolve {
   transition: opacity 2s ease;
   opacity: 1;
@@ -241,6 +257,8 @@
     </div>
     <div id="feedback-message" style="margin-top: 8px; font-size: 14px;"></div>
   </div>
+  <div id="custom-tooltip">Lancaster County</div>
+
 
  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script type="module">
@@ -730,16 +748,10 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
       },
 
       onEachFeature: function (feature, layer) {
-        layer.bindTooltip("Lancaster County", {
-          permanent: false,
-          direction: "center",
-          className: "county-tooltip"
-        });
 
         layer.on('click', function (e) {
   map.fitBounds(layer.getBounds());
   insideLancaster = true;
-          layer.unbindTooltip();
   map.addLayer(roadsLayerGroup);
          if (!worldMask) {
   worldMask = L.geoJSON(createWorldMask(feature), {
