--- a/index.html
+++ b/index.html
@@ -742,8 +742,8 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
       style: {
         color: '#0080ff',
         weight: 3,
-        fillColor: '#cce6ff',
-        fillOpacity: 0.3,
+        fillColor: '#cccccc',
+        fillOpacity: 0.7,
         pane: 'countyPolygon' // ✅ put it in its own top layer
       },
 
