--- a/index.html
+++ b/index.html
@@ -735,118 +735,91 @@ async function loadMap() {
     };
 
 
-fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
-  .then(res => res.json())
-  .then(data => {
-    const countyLayer = L.geoJSON(data, {
+async function initializeMap() {
+  await checkLogin();
+
+  try {
+    // 1. Load and display Lancaster County polygon
+    const lancasterData = await fetch('Counties/Boundaries_County_Lancaster_PA.geojson').then(r => r.json());
+    const lancasterLayer = L.geoJSON(lancasterData, {
       style: {
-        color: '#0080ff',
-        weight: 3,
-        fillColor: '#cccccc',
-        fillOpacity: 0.7,
-        pane: 'countyPolygon' // ✅ put it in its own top layer
+        color: "#888",
+        weight: 2,
+        fillColor: "#888",
+        fillOpacity: 0.35,
+        pane: 'countyPolygon'
       },
-
       onEachFeature: function (feature, layer) {
-        layer.on('mouseover', function (e) {
-  if (insideLancaster) return; // Don't show tooltip if already clicked
+        layer.bindTooltip("Lancaster County", {
+          permanent: true,
+          direction: "center",
+          className: "county-label"
+        });
 
-  const tooltip = document.getElementById('custom-tooltip');
-  const center = layer.getBounds().getCenter();
-  const screenPoint = map.latLngToContainerPoint(center);
+        layer.on('click', function () {
+          map.fitBounds(layer.getBounds(), { maxZoom: 11 });
+          insideLancaster = true;
 
-  tooltip.style.left = screenPoint.x + 'px';
-  tooltip.style.top = screenPoint.y + 'px';
-  tooltip.style.display = 'block';
-});
+          if (!worldMask) {
+            worldMask = L.geoJSON(createWorldMask(feature), {
+              style: {
+                fillColor: '#cccccc',
+                fillOpacity: 0.7,
+                stroke: false,
+                pane: 'maskPane'
+              }
+            }).addTo(map);
 
-layer.on('mouseout', function () {
-  const tooltip = document.getElementById('custom-tooltip');
-  tooltip.style.display = 'none';
-});
+            worldMask.eachLayer(layer => {
+              const el = layer.getElement();
+              if (el) el.style.pointerEvents = 'none';
+            });
+          }
 
+          setTimeout(() => {
+            layer.setStyle({ fillOpacity: 0 });
+            const path = layer._path;
+            if (path) path.style.pointerEvents = 'none';
+            map.getContainer().blur();
+          }, 500);
 
-        layer.on('click', function (e) {
-  map.fitBounds(layer.getBounds());
-  insideLancaster = true;
-  map.addLayer(roadsLayerGroup);
-         if (!worldMask) {
-  worldMask = L.geoJSON(createWorldMask(feature), {
-    style: {
-      fillColor: '#cccccc',
-      fillOpacity: 0.7,
-      stroke: false,
-      pane: 'maskPane'
-    }
-  }).addTo(map);
-
-  worldMask.eachLayer(layer => {
-    const el = layer.getElement();
-    if (el) el.style.pointerEvents = 'none';
-  });
-}
-
-
-
-  // ⏳ After 0.5s, blur the polygon
-  setTimeout(() => {
-    // Reset this layer's style (opacity must match original)
-    layer.setStyle({ fillOpacity: 0 });
-
-    // 🔒 Disable focus/pointer temporarily
-    const path = layer._path;
-    if (path) {
-      path.style.outline = 'none'; // remove outline if browser applied
-      path.style.pointerEvents = 'none';
-    }
-
-    // 🪄 Blur the map container itself
-    const mapContainer = map.getContainer();
-    if (mapContainer) {
-      mapContainer.blur(); // forces DOM-level blur
-    }
-  }, 500);
-});
-
-
-
+          map.addLayer(roadsLayerGroup); // enable road clicks
+        });
       }
-    }).addTo(map); // ✅ This was missing
-    function createWorldMask(feature) {
-  const bounds = map.getBounds().pad(1);
+    }).addTo(map);
 
-  // Outer giant square that covers the map view
-  const outer = [
-    [bounds.getSouthWest().lng - 10, bounds.getSouthWest().lat - 10],
-    [bounds.getNorthEast().lng + 10, bounds.getSouthWest().lat - 10],
-    [bounds.getNorthEast().lng + 10, bounds.getNorthEast().lat + 10],
-    [bounds.getSouthWest().lng - 10, bounds.getNorthEast().lat + 10],
-    [bounds.getSouthWest().lng - 10, bounds.getSouthWest().lat - 10]
-  ];
+    // 2. Load Manheim Township polygon
+    const mtData = await fetch('Townships/Boundaries_Township_ManheimTownship_PA.geojson').then(r => r.json());
+    const mtLayer = L.geoJSON(mtData, {
+      style: {
+        color: "#ff8800",
+        weight: 2,
+        fillColor: "#ff8800",
+        fillOpacity: 0.25
+      },
+      onEachFeature: function (feature, layer) {
+        layer.bindTooltip("Manheim Township", {
+          permanent: true,
+          direction: "center",
+          className: "mt-label"
+        });
 
-  let holes = [];
+        layer.on('click', function () {
+          map.fitBounds(layer.getBounds(), { maxZoom: 15 });
+          console.log("Manheim Township clicked");
+        });
+      }
+    }).addTo(map);
 
-  if (feature.geometry.type === 'Polygon') {
-    holes = feature.geometry.coordinates;
-  } else if (feature.geometry.type === 'MultiPolygon') {
-    holes = feature.geometry.coordinates.flat();
+    // 3. Load roads (original loadMap logic)
+    await loadMap();
+
+    console.log("✅ All map layers loaded.");
+  } catch (e) {
+    console.error("❌ Failed to initialize map:", e);
   }
-
-  return {
-    type: "Feature",
-    geometry: {
-      type: "Polygon",
-      coordinates: [outer, ...holes] // outer is filled, holes are cut out
-    }
-  };
 }
-
-
-
-  });
-
-
-loadMap(); // ✅ called after it's defined
+initializeMap();
  function triggerHintDissolveAnimation(layer) {
   const path = layer._path;
   if (!path) return;
