--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
   map.createPane('hiddenRoads');
   map.getPane('hiddenRoads').style.pointerEvents = 'none'; // Roads cannot block clicks initially
   map.getPane('clickable-buffer').style.opacity = '1';
-  map.createPane('polygonPane');
-  map.getPane('polygonPane').style.zIndex = 600;
-  map.createPane('countyPolygon');
-  map.getPane('countyPolygon').style.zIndex = 650; // higher than roads (default is 400 or 600)
+  map.createPane('townshipPane');
+  map.getPane('townshipPane').style.zIndex = 500;
+  map.createPane('countyPane');
+  map.getPane('countyPane').style.zIndex = 400; // higher than roads (default is 400 or 600)
   map.createPane('maskPane'); // Create a custom pane for the gray mask
-  map.getPane('maskPane').style.zIndex = 299; // Ensure it renders below roads
+  map.getPane('maskPane').style.zIndex = 300; // Ensure it renders below roads
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   maxZoom: 19
 }).addTo(map);
