--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
 <script type="module">
   let currentRoad = null;
   let activeRoadName = null;
+  let hoverOverlay = null;
   let worldMask;
   let roadsLayerGroup = L.layerGroup(); // Holds all road layers
   let insideLancaster = false;
